Add SAL Briefing: Solfacil

--- a/solfacil.html
+++ b/solfacil.html
@@ -300,14 +300,14 @@
         <h2>🏢 1. Contexto Geral Empresa</h2>
 
         <ul>
-            <li><strong>Segmento de Mercado:</strong> Fintech B2B2C - Energia Solar</li>
-            <li><strong>Modelo de Negócio:</strong> B2B2C - Fintech + Distribuição de kits fotovoltaicos</li>
+            <li><strong>Segmento de Mercado:</strong> Fintech B2B2C - Financiamento de energia solar</li>
+            <li><strong>Modelo de Negócio:</strong> B2B2C - Fintech + Centros de distribuição de kits fotovoltaicos</li>
         </ul>
 
         <div class="subsection">
             <h3>1.1 Dados Gerais Lead</h3>
             <ul>
-                <li><strong>Quantidade de Colaboradores:</strong> 380 colaboradores, planejamento para 400 até fim do ano</li>
+                <li><strong>Quantidade de Colaboradores:</strong> 380 colaboradores, planejando chegar a 400 até final do ano</li>
                 <li><strong>Modelo Contratação:</strong> Mix CLT e PJ</li>
                 <li><strong>Escritório/s:</strong> [Não mencionado]</li>
                 <li><strong>Modelo de Trabalho:</strong> Híbrido 4x1</li>
@@ -318,10 +318,10 @@
         <div class="subsection">
             <h3>1.2 Perguntas ICP</h3>
             <ul>
-                <li><strong>Companhia Pretende Contratar:</strong> 20 posições a serem preenchidas até final do ano</li>
+                <li><strong>Companhia Pretende Contratar:</strong> 20 posições para fechar 400 headcount até final do ano</li>
                 <li><strong>Tem Vaga Aberta/Pretende Abrir em RH:</strong> [Não mencionado]</li>
-                <li><strong>Tem Time Tech (Eng/Dev):</strong> Sim, time de tecnologia é uma das áreas core</li>
-                <li><strong>Turnover Ano:</strong> Alto, identificado como ponto de atenção</li>
+                <li><strong>Tem Time Tech (Eng/Dev):</strong> Sim - Time de tecnologia é uma das áreas core</li>
+                <li><strong>Turnover Ano:</strong> Alto turnover mencionado como problema atual</li>
             </ul>
         </div>
 
@@ -345,7 +345,7 @@
 
             <h4>Stakeholders e Cargos:</h4>
             <ul>
-                <li><strong>Cesar Sies</strong> - Head de RH - Principal decisor</li><li><strong>Izabella Mabel</strong> - People Analytics - Responsável por remuneração e analytics</li>
+                <li><strong>Cesar Sies</strong> - Head de RH - Principal stakeholder, decisor</li><li><strong>Izabella Mabel</strong> - People Analytics - Responsável por remuneração e analytics</li>
             </ul>
 
             <h4>Subdivisões RH:</h4>
@@ -367,7 +367,7 @@
 
     <div class="section">
         <h2>🔥 2. Principais Dores</h2>
-        <div class='pain-box'><h4>Pain 1 - Falta de agilidade na resposta a movimentações de mercado</h4><ul><li><strong>Descrição:</strong> Necessidade de maior velocidade para ajustar tabelas salariais em resposta a movimentos bruscos do mercado, especialmente em áreas críticas como IA, risco, modelagem e pricing</li><li><strong>Onde aparece:</strong> Áreas técnicas específicas (IA, Risco, Modelagem, Pricing) e nova financeira</li><li><strong>Impacto percebido:</strong> Potencial perda de talentos e dificuldade de atração em áreas estratégicas</li></ul></div><div class='pain-box'><h4>Pain 2 - Estruturação incompleta de cargos e responsabilidades</h4><ul><li><strong>Descrição:</strong> Papéis e responsabilidades não estão totalmente definidos e estruturados</li><li><strong>Onde aparece:</strong> Toda a organização</li><li><strong>Impacto percebido:</strong> Afeta pontuação e enquadramento de cargos</li></ul></div><div class='pain-box'><h4>Pain 3 - Alto Turnover</h4><ul><li><strong>Descrição:</strong> Taxa de turnover elevada, especialmente após movimentações organizacionais em 2023</li><li><strong>Onde aparece:</strong> Organização como um todo</li><li><strong>Impacto percebido:</strong> Perda de talentos e necessidade de reposição constante</li></ul></div>
+        <div class='pain-box'><h4>Pain 1 - Falta de agilidade na resposta a movimentações de mercado</h4><ul><li><strong>Descrição:</strong> Necessidade de maior velocidade para ajustar tabelas salariais em resposta a movimentos do mercado, especialmente em áreas críticas como IA, risco, modelagem e pricing</li><li><strong>Onde aparece:</strong> Áreas técnicas específicas (IA, Risco, Modelagem, Pricing)</li><li><strong>Impacto percebido:</strong> Risco de perder talentos por não conseguir responder rapidamente às mudanças de mercado</li></ul></div><div class='pain-box'><h4>Pain 2 - Estrutura de cargos e responsabilidades não consolidada</h4><ul><li><strong>Descrição:</strong> Ausência de estrutura bem definida de papéis e responsabilidades</li><li><strong>Onde aparece:</strong> Toda a organização</li><li><strong>Impacto percebido:</strong> Dificulta enquadramento e pontuação de cargos</li></ul></div><div class='pain-box'><h4>Pain 3 - Alto turnover</h4><ul><li><strong>Descrição:</strong> Turnover elevado, especialmente após movimentações organizacionais recentes</li><li><strong>Onde aparece:</strong> Toda empresa, com foco em posições críticas</li><li><strong>Impacto percebido:</strong> Perda de talentos e conhecimento</li></ul></div><div class='pain-box'><h4>Pain 4 - Ausência de plano de carreira estruturado</h4><ul><li><strong>Descrição:</strong> Plano de carreira é um dos objetivos estratégicos para 2024, ainda não implementado</li><li><strong>Onde aparece:</strong> Toda organização</li><li><strong>Impacto percebido:</strong> Falta de clareza na evolução profissional dos colaboradores</li></ul></div>
     </div>
 
     <div class="section">
@@ -377,17 +377,17 @@
         <p>Compensation governance & benchmarking + Job architecture & leveling</p>
 
         <h4>Onde acreditamos que está o maior impacto?</h4>
-        <ul><li>Áreas técnicas críticas: Maior agilidade nas decisões de pay para áreas como IA, Risco, Modelagem</li><li>Nova financeira: Suporte na estruturação de cargos e remuneração</li><li>Organização geral: Melhor estruturação de cargos e responsabilidades</li></ul>
+        <ul><li>Áreas técnicas críticas: Maior agilidade nas decisões de pay para retenção de talentos em IA, Risco, Modelagem</li><li>Estruturação organizacional: Implementação de arquitetura de cargos e carreiras</li><li>Governança de remuneração: Processo mais ágil de decisão e ajustes salariais</li></ul>
     </div>
 
     <div class="section">
         <h2>📋 4. O Que Sabemos</h2>
         <ul>
             <li><strong>Estrutura / níveis:</strong> 4 tabelas salariais distintas: Enablers (backoffice), Logística/Supply, Tecnologia/Produto, Go to Market</li>
-            <li><strong>Pay decisions:</strong> Decisões baseadas em grades, não em cargos. Grade 13+ elegível para incentivos</li>
+            <li><strong>Pay decisions:</strong> Baseadas em grades, com decisões por agrupamento e não por cargo</li>
             <li><strong>Benchmarking:</strong> Utilizam Towers Watson como principal fonte</li>
-            <li><strong>Posicionamento Estratégico:</strong> Busca posicionamento competitivo mas não líder de mercado</li>
-            <li><strong>Variável / incentivos:</strong> ICP recém reestruturado, ILP implementado, comissões para áreas específicas (Collection, CX)</li>
+            <li><strong>Posicionamento Estratégico:</strong> Busca posicionamento competitivo mas não necessariamente top of market</li>
+            <li><strong>Variável / incentivos:</strong> ICP reestruturado recentemente, ILP implementado final de 2023, comissões para áreas específicas</li>
             <li><strong>Ferramentas / vendors:</strong> Towers Watson para pesquisa salarial</li>
         </ul>
     </div>
@@ -397,12 +397,12 @@
 
         <div class="question-box">
             <h4>🔍 O que ainda não sabemos e é crítico?</h4>
-            <ul><li>Qual o orçamento disponível para investimento em ferramentas de remuneração?</li><li>Como funciona o processo atual de aprovação para ajustes salariais?</li><li>Quais são os principais concorrentes por talentos nas áreas críticas?</li><li>Como está estruturado o processo decisório para implementação de novas ferramentas?</li></ul>
+            <ul><li>Qual o orçamento disponível para projetos de People/Rewards em 2024?</li><li>Quais são os KPIs específicos de retenção para áreas críticas?</li><li>Como funciona o processo atual de decisão para ajustes salariais fora do ciclo?</li><li>Qual o tamanho das equipes nas áreas críticas mencionadas (IA, Risco, Modelagem)?</li><li>Como está estruturado o processo atual de avaliação de desempenho?</li></ul>
         </div>
 
         <div class="question-box">
             <h4>✅ O que precisa ser validado no deep discovery?</h4>
-            <ul><li>Validar se o alto turnover está realmente relacionado a questões de remuneração</li><li>Confirmar se a atual pesquisa salarial não atende em termos de agilidade ou dados</li><li>Verificar se há real autonomia do RH para mudança de fornecedor</li></ul>
+            <ul><li>Validar se a dor de agilidade é realmente mais crítica que estruturação básica de cargos</li><li>Confirmar se há budget aprovado para projeto de plano de carreira em 2024</li><li>Verificar se a atual estrutura de 4 tabelas está adequada ou precisa revisão</li><li>Confirmar se há apoio da liderança para mudanças na governança de remuneração</li></ul>
         </div>
     </div>
 
@@ -412,7 +412,7 @@
             <li><strong>Próxima call:</strong> SAL Discovery & Deepening</li>
         </ul>
         <div>
-            <p>Cliente demonstrou dores claras e alinhadas com nossa solução, especialmente na necessidade de maior agilidade e estruturação. Próxima etapa deve aprofundar pontos técnicos e apresentar plataforma.</p><ul><li>Agendar SAL com demo da plataforma (já agendado para 26/02 às 9:30)</li><li>Trazer executivo sênior para aprofundar aspectos técnicos</li><li>Preparar demonstração focada em casos de uso para áreas críticas (IA, Risco, Modelagem)</li></ul>
+            <p><strong>Por que essa recomendação:</strong> Prospect demonstra dores claras e urgência, mas ainda há gaps importantes de informação sobre processos atuais e governança</p><ul><li><strong>Abordagem recomendada:</strong> Focar na validação do processo atual de decisões salariais e como podemos trazer mais agilidade mantendo governança. Explorar conexão entre falta de estrutura de cargos e dificuldade em responder ao mercado</li><li><strong>Pontos de atenção:</strong> Cliente já tem vendor estabelecido (Towers) - posicionar Comp como complementar e não substituto. Validar se há real disposição para mudança de processos além de apenas acesso a dados</li><li><strong>Posicionamento de valor:</strong> Enfatizar nossa capacidade de combinar dados ágeis com consultoria estratégica, especialmente em momentos de crescimento e estruturação. Destacar casos de empresas que conseguiram reduzir tempo de resposta a movimentos de mercado</li></ul>
         </div>
     </div>
 </body>
