Add SAL Briefing: Farmoterápica

--- a/farmoterapica.html
+++ b/farmoterapica.html
@@ -300,17 +300,17 @@
         <h2>🏢 1. Contexto Geral Empresa</h2>
 
         <ul>
-            <li><strong>Segmento de Mercado:</strong> [Não mencionado]</li>
-            <li><strong>Modelo de Negócio:</strong> [Não mencionado]</li>
+            <li><strong>Segmento de Mercado:</strong> Healthcare/Farmacêutico - B2B Hospitalar</li>
+            <li><strong>Modelo de Negócio:</strong> B2B Hospitalar - Produção e fornecimento de nutrição parenteral para hospitais</li>
         </ul>
 
         <div class="subsection">
             <h3>1.1 Dados Gerais Lead</h3>
             <ul>
-                <li><strong>Quantidade de Colaboradores:</strong> [Não mencionado]</li>
+                <li><strong>Quantidade de Colaboradores:</strong> 160 funcionários</li>
                 <li><strong>Modelo Contratação:</strong> [Não mencionado]</li>
-                <li><strong>Escritório/s:</strong> [Não mencionado]</li>
-                <li><strong>Modelo de Trabalho:</strong> [Não mencionado]</li>
+                <li><strong>Escritório/s:</strong> 5 unidades: São Paulo (escritório), Rio de Janeiro (produção), Indaiatuba (produção), Recife (produção), Ribeirão Preto (produção)</li>
+                <li><strong>Modelo de Trabalho:</strong> Presencial - operação 365 dias/ano em regime de escala</li>
                 <li><strong>Source do Card:</strong> [Não mencionado]</li>
             </ul>
         </div>
@@ -318,10 +318,10 @@
         <div class="subsection">
             <h3>1.2 Perguntas ICP</h3>
             <ul>
-                <li><strong>Companhia Pretende Contratar:</strong> [Não mencionado]</li>
-                <li><strong>Tem Vaga Aberta/Pretende Abrir em RH:</strong> [Não mencionado]</li>
+                <li><strong>Companhia Pretende Contratar:</strong> Crescimento previsto de 30-40 funcionários com nova unidade no Nordeste em ~1 ano</li>
+                <li><strong>Tem Vaga Aberta/Pretende Abrir em RH:</strong> Não há planos imediatos de contratação para RH - foco em estruturação antes de expandir equipe</li>
                 <li><strong>Tem Time Tech (Eng/Dev):</strong> [Não mencionado]</li>
-                <li><strong>Turnover Ano:</strong> [Não mencionado]</li>
+                <li><strong>Turnover Ano:</strong> Alto turnover, especialmente em Indaiatuba - ~100% em 2023 (60 contratações para um time de 60 pessoas)</li>
             </ul>
         </div>
 
@@ -341,16 +341,16 @@
                 </div>
             </div>
 
-            [Não mencionado]
+            <div class='org-legend'><div class='legend-item'><span class='legend-badge badge-mql'>MQL</span><span>Participou do MQL</span></div><div class='legend-item'><span class='legend-badge badge-sal'>SAL</span><span>Estará no SAL</span></div></div><div class='org-chart'><div class='org-level'><div class='org-box'><div class='title'>Gerente de RH</div><div class='name'>[Nome não mencionado]</div></div></div><div class='org-connector'></div><div class='org-level'><div class='org-box'><div class='title'>Analista Sênior de RH</div><div class='name'>[Nome não mencionado]</div></div></div></div>
 
             <h4>Stakeholders e Cargos:</h4>
             <ul>
-                [Não mencionado]
+                <li><strong>Leonardo Kfouri</strong> - Cargo não mencionado - Principal stakeholder na conversa</li>
             </ul>
 
             <h4>Subdivisões RH:</h4>
             <ul>
-                [Não mencionado]
+                <li>Recrutamento e Seleção - Principal foco atual do time de RH</li><li>Folha de Pagamento - Alocada no departamento Financeiro, não no RH</li>
             </ul>
         </div>
 
@@ -367,27 +367,27 @@
 
     <div class="section">
         <h2>🔥 2. Principais Dores</h2>
-        [Não mencionado]
+        <div class='pain-box'><h4>Pain 1 - Descentralização Geográfica do RH</h4><ul><li><strong>Descrição:</strong> Impossibilidade de manter estrutura de RH em cada localidade devido ao número reduzido de funcionários por unidade (~30 por local)</li><li><strong>Onde aparece:</strong> Todas as unidades produtivas</li><li><strong>Impacto percebido:</strong> Unidades focadas apenas no técnico/operacional, sem gestão adequada de pessoas</li></ul></div><div class='pain-box'><h4>Pain 2 - Turnover Crítico</h4><ul><li><strong>Descrição:</strong> Taxa de turnover de ~100% em Indaiatuba, com 60 contratações em 2023 para um time de 60 pessoas</li><li><strong>Onde aparece:</strong> Principalmente unidade de Indaiatuba</li><li><strong>Impacto percebido:</strong> Times nunca completos, ciclo constante de contratação-perda</li></ul></div><div class='pain-box'><h4>Pain 3 - Desenvolvimento Organizacional Inexistente</h4><ul><li><strong>Descrição:</strong> Ausência total de trilhas de carreira, DHO e processos de desenvolvimento</li><li><strong>Onde aparece:</strong> Toda a organização</li><li><strong>Impacto percebido:</strong> Dificuldade de retenção e desenvolvimento de talentos</li></ul></div><div class='pain-box'><h4>Pain 4 - Problemas de Liderança</h4><ul><li><strong>Descrição:</strong> Lideranças não desenvolvidas e sem ferramentas para gestão de pessoas</li><li><strong>Onde aparece:</strong> Todas as unidades</li><li><strong>Impacto percebido:</strong> Contribui para alto turnover e falta de desenvolvimento das equipes</li></ul></div>
     </div>
 
     <div class="section">
         <h2>💎 3. Hipótese de Valor Inicial</h2>
 
         <h4>Que tipo de problema de People / Rewards isso parece ser?</h4>
-        <p>[Não mencionado]</p>
+        <p>Job architecture & leveling + Leadership development framework</p>
 
         <h4>Onde acreditamos que está o maior impacto?</h4>
-        [Não mencionado]
+        <ul><li>Estruturação de trilhas de carreira: Criar transparência e clareza para desenvolvimento</li><li>Framework de liderança: Desenvolver gestores para melhor retenção</li><li>Governança de RH descentralizada: Permitir gestão de pessoas efetiva em todas as unidades</li></ul>
     </div>
 
     <div class="section">
         <h2>📋 4. O Que Sabemos</h2>
         <ul>
-            <li><strong>Estrutura / níveis:</strong> [Não mencionado]</li>
+            <li><strong>Estrutura / níveis:</strong> Possui plano de cargos e salários estruturado</li>
             <li><strong>Pay decisions:</strong> [Não mencionado]</li>
-            <li><strong>Benchmarking:</strong> [Não mencionado]</li>
-            <li><strong>Posicionamento Estratégico:</strong> [Não mencionado]</li>
-            <li><strong>Variável / incentivos:</strong> [Não mencionado]</li>
+            <li><strong>Benchmarking:</strong> Realizam benchmark de mercado regularmente para ajustes</li>
+            <li><strong>Posicionamento Estratégico:</strong> Salários acima do mercado para áreas produtivas</li>
+            <li><strong>Variável / incentivos:</strong> Apenas comercial possui remuneração variável</li>
             <li><strong>Ferramentas / vendors:</strong> [Não mencionado]</li>
         </ul>
     </div>
@@ -397,12 +397,12 @@
 
         <div class="question-box">
             <h4>🔍 O que ainda não sabemos e é crítico?</h4>
-            <ul><li>Qual o tamanho atual da empresa (headcount)?</li><li>Quem são os principais stakeholders envolvidos nas decisões de remuneração?</li><li>Como está estruturado o time de RH/People?</li><li>Quais são os principais desafios atuais relacionados à remuneração?</li><li>Qual o modelo de trabalho atual (remoto/híbrido/presencial)?</li></ul>
+            <ul><li>Qual o cargo/papel exato do Leonardo na organização e seu poder de decisão?</li><li>Qual o orçamento disponível para projetos de RH?</li><li>Como está estruturado o processo decisório para aprovação de novos projetos/fornecedores?</li><li>Quais ferramentas/sistemas de RH já utilizam hoje?</li><li>Qual o prazo ideal para implementação das mudanças necessárias?</li></ul>
         </div>
 
         <div class="question-box">
             <h4>✅ O que precisa ser validado no deep discovery?</h4>
-            <ul><li>Validar estrutura organizacional atual</li><li>Confirmar processo decisório de remuneração</li><li>Verificar ferramentas e práticas atuais de gestão de remuneração</li></ul>
+            <ul><li>Validar se os salários realmente estão acima do mercado nas áreas produtivas</li><li>Confirmar se o plano de cargos e salários atual é efetivo ou precisa revisão</li><li>Verificar se há outras iniciativas de RH em andamento que possam impactar o projeto</li></ul>
         </div>
     </div>
 
@@ -412,7 +412,7 @@
             <li><strong>Próxima call:</strong> SAL Discovery & Deepening</li>
         </ul>
         <div>
-            <p><strong>Por que essa recomendação:</strong> A transcrição indica uma conversa inicial sem aprofundamento suficiente nos desafios e estrutura atual da empresa</p><ul><li><strong>Abordagem recomendada:</strong> Realizar discovery aprofundado para entender contexto atual, dores específicas e processos de remuneração</li><li><strong>Pontos de atenção:</strong> Necessário mapear stakeholders chave e processo decisório antes de avançar com propostas</li><li><strong>Posicionamento de valor:</strong> Focar inicialmente em entender desafios específicos para então alinhar solução às necessidades da empresa</li></ul>
+            <p><strong>Por que essa recomendação:</strong> Prospect demonstra dores claras e urgentes, mas ainda há gaps importantes de informação sobre estrutura decisória e contexto completo</p><ul><li><strong>Abordagem recomendada:</strong> Focar no impacto do turnover nos custos operacionais e como uma estrutura integrada de people pode resolver múltiplas dores simultaneamente</li><li><strong>Pontos de atenção:</strong> Cargo/poder de decisão do stakeholder principal não está claro - necessário validar antes de avançar com proposta comercial</li><li><strong>Posicionamento de valor:</strong> Enfatizar experiência com empresas multi-site e cases de redução de turnover através de estruturação de RH integrada</li></ul>
         </div>
     </div>
 </body>
