Add SAL Briefing: Atos (Semantix) - MQL + SAL consolidated

--- a/index.html
+++ b/index.html
@@ -58,69 +58,13 @@
 </head>
 <body>
     <div class="logo">comp</div>
-        <div class="briefing-item">
-            <a href="systra-engenharia.html">Systra Engenharia</a>
-            <div class="briefing-date">26 de fevereiro de 2026</div>
-        </div>
-        <div class="briefing-item">
-            <a href="farmoterapica.html">Farmoterápica</a>
-            <div class="briefing-date">26 de fevereiro de 2026</div>
-        </div>
-        <div class="briefing-item">
-            <a href="solfacil.html">Solfacil</a>
-            <div class="briefing-date">26 de fevereiro de 2026</div>
-        </div>
-        <div class="briefing-item">
-            <a href="farmoterapica.html">Farmoterápica</a>
-            <div class="briefing-date">26 de fevereiro de 2026</div>
-        </div>
-        <div class="briefing-item">
-            <a href="solfacil.html">Solfacil</a>
-            <div class="briefing-date">26 de fevereiro de 2026</div>
-        </div>
-        <div class="briefing-item">
-            <a href="solfacil.html">Solfacil</a>
-            <div class="briefing-date">26 de fevereiro de 2026</div>
-        </div>
-        <div class="briefing-item">
-            <a href="farmoterapica.html">Farmoterápica</a>
-            <div class="briefing-date">26 de fevereiro de 2026</div>
-        </div>
-        <div class="briefing-item">
-            <a href="farmoterapica.html">Farmoterápica</a>
-            <div class="briefing-date">26 de fevereiro de 2026</div>
-        </div>
-        <div class="briefing-item">
-            <a href="buildbox.html">Buildbox</a>
-            <div class="briefing-date">26 de fevereiro de 2026</div>
-        </div>
-        <div class="briefing-item">
-            <a href="alabia.html">Alabia</a>
-            <div class="briefing-date">26 de fevereiro de 2026</div>
-        </div>
-        <div class="briefing-item">
-            <a href="makasi.html">Makasí</a>
-            <div class="briefing-date">26 de fevereiro de 2026</div>
-        </div>
-        <div class="briefing-item">
-            <a href="farmoterapica.html">Farmoterápica</a>
-            <div class="briefing-date">26 de fevereiro de 2026</div>
-        </div>
-        <div class="briefing-item">
-            <a href="alabia.html">Alabia</a>
-            <div class="briefing-date">26 de fevereiro de 2026</div>
-        </div>
-        <div class="briefing-item">
-            <a href="alabia.html">Alabia</a>
-            <div class="briefing-date">26 de fevereiro de 2026</div>
-        </div>
-        <div class="briefing-item">
-            <a href="grupo-via1.html">Grupo Via1</a>
-            <div class="briefing-date">26 de fevereiro de 2026</div>
-        </div>
     <h1>SAL Briefings</h1>
 
     <div class="briefing-list">
+        <div class="briefing-item">
+            <a href="atos.html">Atos (Semantix)</a>
+            <div class="briefing-date">26 de fevereiro de 2026</div>
+        </div>
         <div class="briefing-item">
             <a href="clariens.html">Clariens</a>
             <div class="briefing-date">26 de fevereiro de 2026</div>
