Update Atos briefing: Patricia = CHRO, Thais = Coordenadora

--- a/atos.html
+++ b/atos.html
@@ -370,7 +370,7 @@
                 <div class="org-connector"></div>
                 <div class="org-level">
                     <div class="org-box">
-                        <div class="title">Diretora de RH LATAM</div>
+                        <div class="title">CHRO</div>
                         <div class="name">Patricia Estima (Pati)</div>
                         <div>
                             <span class="org-badge badge-mql">MQL</span>
@@ -380,7 +380,7 @@
                 <div class="org-connector"></div>
                 <div class="org-level">
                     <div class="org-box">
-                        <div class="title">Head de Remuneração</div>
+                        <div class="title">Coordenadora de Remuneração</div>
                         <div class="name">Thais Zambotti</div>
                         <div>
                             <span class="org-badge badge-mql">MQL</span>
@@ -403,8 +403,8 @@
 
             <h4>Stakeholders e Cargos:</h4>
             <ul>
-                <li><strong>Thais Zambotti</strong> - Head de Remuneração (1 ano na Atos, conhece Comp desde 2023/2024). Champion do projeto. "Única pessoa de remuneração" (Thais + 1 analista + Pati compartilhada). Ex-Beep (conversou com Chris da Comp), fez treinamento com Fernanda/Fábio (How2Pay) em 2024</li>
-                <li><strong>Patricia Estima</strong> - Diretora de RH América Latina. Mora em Londrina, viaja para SP. Decision maker final. Trabalha em "dupla" com Thais ("Pati foi minha chefe, minha par")</li>
+                <li><strong>Thais Zambotti</strong> - Coordenadora de Remuneração (1 ano na Atos, conhece Comp desde 2023/2024). Champion do projeto. "Única pessoa de remuneração" (Thais + 1 analista + Pati compartilhada). Ex-Beep (conversou com Chris da Comp), fez treinamento com Fernanda/Fábio (How2Pay) em 2024</li>
+                <li><strong>Patricia Estima</strong> - CHRO (Chief Human Resources Officer). Mora em Londrina, viaja para SP. Decision maker final. Trabalha em "dupla" com Thais ("Pati foi minha chefe, minha par")</li>
                 <li><strong>Nelson</strong> - CEO (ex-Atos LATAM, agora CEO Semantix). Aprovador final, envolvido em decisões de KPIs e estratégia</li>
                 <li><strong>CFO/Financeiro</strong> - Aprovação de budget, definição de KPIs financeiros</li>
                 <li><strong>VPs</strong> - Usuários da ferramenta, fazem salary review. "VPs bem treinados" ao longo dos anos para rodar ciclo de mérito</li>
@@ -413,7 +413,7 @@
 
             <h4>Subdivisões RH:</h4>
             <ul>
-                <li><strong>Remuneração:</strong> Thais (Head) + 1 analista + Patrícia (compartilhada)</li>
+                <li><strong>Remuneração:</strong> Thais (Coordenadora) + 1 analista + Patrícia (compartilhada)</li>
                 <li><strong>Business Partnership:</strong> HRBPs (fazem ponte com negócio, recebem análises de remuneração por e-mail)</li>
                 <li><strong>Recrutamento e Seleção:</strong> Time separado (não detalhado)</li>
                 <li><strong>Outras áreas RH:</strong> Não especificadas</li>
