Add SAL Briefing: Deep ESG

--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
 </head>
 <body>
     <div class="logo">comp</div>
+        <div class="briefing-item">
+            <a href="deep-esg.html">Deep ESG</a>
+            <div class="briefing-date">27 de fevereiro de 2026</div>
+        </div>
     <h1>SAL Briefings</h1>
 
     <div class="briefing-list">
