Add SAL Briefing: Atos

--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
 <body>
     <div class="logo">comp</div>
         <div class="briefing-item">
+            <a href="atos.html">Atos</a>
+            <div class="briefing-date">27 de fevereiro de 2026</div>
+        </div>
+        <div class="briefing-item">
             <a href="vericode.html">Vericode</a>
             <div class="briefing-date">27 de fevereiro de 2026</div>
         </div>
