Add SAL Briefing: diag-almaviva-solutions.html

--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
 <body>
     <div class="logo">comp</div>
         <div class="briefing-item">
+            <a href="diag-almaviva-solutionshtml.html">diag-almaviva-solutions.html</a>
+            <div class="briefing-date">1 de março de 2026</div>
+        </div>
+        <div class="briefing-item">
             <a href="atos.html">Atos</a>
             <div class="briefing-date">27 de fevereiro de 2026</div>
         </div>
